// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HoverInfo > renders 1`] = `
<div
  class="hover-info"
  data-v-a3026453=""
  style="left: 50px; top: 150px;"
>
  <div
    class="info-box pa-2"
    data-v-a3026453=""
  >
    <div
      class="v-avatar v-theme--light v-avatar--density-default v-avatar--variant-flat avatar mb-2 text-font"
      data-v-a3026453=""
      style="width: 25px; height: 25px;"
    >
      
      
      <span
        data-v-a3026453=""
      >
        MM
      </span>
      
      
      
      <!---->
      <span
        class="v-avatar__underlay"
      />
      
    </div>
    <h3
      data-v-a3026453=""
    >
      Marianne Müller
    </h3>
  </div>
  <div
    class="mt-2 d-flex align-center justify-center"
    data-v-a3026453=""
  >
    <button
      data-v-a3026453=""
    >
      <svg
        data-v-a3026453=""
        fill="none"
        height="28"
        viewBox="0 0 28 28"
        width="28"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          data-v-a3026453=""
          opacity="0.75"
        >
          <circle
            cx="14"
            cy="14"
            data-v-a3026453=""
            fill="#3D4753"
            r="14"
          />
          <circle
            cx="14"
            cy="14"
            data-v-a3026453=""
            r="13.5"
            stroke="#979797"
            stroke-opacity="0.3"
          />
        </g>
        <circle
          cx="7"
          cy="14"
          data-v-a3026453=""
          fill="#CCCCCC"
          r="2"
          transform="rotate(-90 7 14)"
        />
        <circle
          cx="14"
          cy="14"
          data-v-a3026453=""
          fill="#CCCCCC"
          r="2"
          transform="rotate(-90 14 14)"
        />
        <circle
          cx="21"
          cy="14"
          data-v-a3026453=""
          fill="#CCCCCC"
          r="2"
          transform="rotate(-90 21 14)"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`HoverInfo > renders without Show More button 1`] = `
<div
  class="hover-info"
  data-v-a3026453=""
  style="left: 50px; top: 150px;"
>
  <div
    class="info-box pa-2"
    data-v-a3026453=""
  >
    <div
      class="v-avatar v-theme--light v-avatar--density-default v-avatar--variant-flat avatar mb-2 text-font"
      data-v-a3026453=""
      style="width: 25px; height: 25px;"
    >
      
      
      <span
        data-v-a3026453=""
      >
        MM
      </span>
      
      
      
      <!---->
      <span
        class="v-avatar__underlay"
      />
      
    </div>
    <h3
      data-v-a3026453=""
    >
      Marianne Müller
    </h3>
  </div>
  <!--v-if-->
</div>
`;

exports[`HoverInfo > renders without star data 1`] = `
<div
  class="hover-info"
  data-v-a3026453=""
  style="left: 50px; top: 150px;"
>
  <div
    class="info-box pa-2"
    data-v-a3026453=""
  >
    <div
      class="v-avatar v-theme--light v-avatar--density-default v-avatar--variant-flat avatar mb-2 text-font"
      data-v-a3026453=""
      style="width: 25px; height: 25px;"
    >
      
      
      <span
        data-v-a3026453=""
      />
      
      
      
      <!---->
      <span
        class="v-avatar__underlay"
      />
      
    </div>
    <h3
      data-v-a3026453=""
    />
  </div>
  <!--v-if-->
</div>
`;
